better specs
