# localstack-sdk/localstack/generated/models/__init__.py
@@ -42,7 +42,6 @@ from localstack.generated.models.init_scripts_scripts_inner import InitScriptsSc
 from localstack.generated.models.list_pods200_response import ListPods200Response
 from localstack.generated.models.list_pods200_response_cloudpods_inner import ListPods200ResponseCloudpodsInner
 from localstack.generated.models.load_pod200_response import LoadPod200Response
-from localstack.generated.models.localstack_chaos_effects_get200_response import LocalstackChaosEffectsGet200Response
 from localstack.generated.models.localstack_pods_environment_get200_response import LocalstackPodsEnvironmentGet200Response
 from localstack.generated.models.localstack_pods_remotes_get200_response import LocalstackPodsRemotesGet200Response
 from localstack.generated.models.localstack_pods_remotes_get200_response_remotes_inner import LocalstackPodsRemotesGet200ResponseRemotesInner
@@ -50,6 +49,7 @@ from localstack.generated.models.localstack_pods_remotes_name_get200_response im
 from localstack.generated.models.localstack_pods_remotes_name_post_request import LocalstackPodsRemotesNamePostRequest
 from localstack.generated.models.localstack_stackinfo_get200_response import LocalstackStackinfoGet200Response
 from localstack.generated.models.manage_session_request import ManageSessionRequest
+from localstack.generated.models.network_effects_config import NetworkEffectsConfig
 from localstack.generated.models.pod_completion_event import PodCompletionEvent
 from localstack.generated.models.pod_service_event import PodServiceEvent
 from localstack.generated.models.remote_config import RemoteConfig
